feat(ui): add ability to send a simple tweet to the twitter server

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>	
-	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-	<script type="text/javascript" src="jq.js"></script>
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="jq.js"></script>
 </head>
 
 <body>
-	<button>Send</button>
+  <textarea id="tweet-message" type="text" name="tweet-message" placeholder="Send a Tweet"></textarea>
+  <button>Send</button>
 </body>
 </html>
 
