--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,16 @@
 <head>	
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="jq.js"></script>
+  <link rel="stylesheet" href="chatstyle.css" type="text/css">
 </head>
 
 <body>
-  <textarea id="tweet-message" type="text" name="tweet-message" placeholder="Send a Tweet"></textarea>
-  <button>Send</button>
+	<div id="header">
+		ChatXpress
+	</div>
+  <textarea id="tweet-message" type="text" name="tweet-message" placeholder="Send a Tweet"></textarea><br>
+  <div id="send" class="button">Send</div>
+  <div id="tweet" class="button">Tweets</div>
 </body>
 </html>
 
