Chat page initialization
Making of the chat page

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
 	</div>
   <textarea id="tweet-message" type="text" name="tweet-message" placeholder="Send a Tweet"></textarea><br>
   <div id="send" class="button">Send</div>
-  <div id="tweet" class="button">Tweets</div>
+  <div id="tweet" class="button">Tweets</div><br>
+  <div id="show"></div>
 </body>
 </html>
 
